--- a/vercel.json
+++ b/vercel.json
@@ -1,1 +1,3 @@
- { "rewrites": [{ "source": "index.html", "destination": "/" }] }
+{
+"rewrites": [{ "source": "/(.*)", "destination": "/index.html" }]
+}
