--- a/vercel.json
+++ b/vercel.json
@@ -1,3 +1,6 @@
 {
-"rewrites": [{ "source": "/(.*)", "destination": "/index.html" }]
+  "rewrites": [
+    { "source": "/", "destination": "/index.html" },
+    { "source": "/login", "destination": "/pages/login.html" }
+  ]
 }
