route names fixed

--- a/vercel.json
+++ b/vercel.json
@@ -1,6 +1,6 @@
 {
   "rewrites": [
     { "source": "/", "destination": "/index.html" },
-    { "source": "/login", "destination": "/pages/login.html" }
+    { "source": "/profile", "destination": "/pages/profile.html" }
   ]
 }
